src/styles.css
@font-face {
  font-family: 'Open Sans';
  src: url('../assets/open-sans/regular/OpenSans-Regular.eot');
  src: url('../assets/open-sans/regular/OpenSans-Regular.eot?#iefix') format('embedded-opentype'),
    url('../assets/open-sans/regular/OpenSans-Regular.woff2') format('woff2'),
    url('../assets/open-sans/regular/OpenSans-Regular.woff') format('woff'),
    url('../assets/open-sans/regular/OpenSans-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Open Sans';
  src: url('../assets/open-sans/light/OpenSans-Light.eot');
  src: url('../assets/open-sans/light/OpenSans-Light.eot?#iefix') format('embedded-opentype'),
    url('../assets/open-sans/light/OpenSans-Light.woff2') format('woff2'),
    url('../assets/open-sans/light/OpenSans-Light.woff') format('woff'),
    url('../assets/open-sans/light/OpenSans-Light.ttf') format('truetype');
  font-weight: 300;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Open Sans';
  src: url('../assets/open-sans/medium/OpenSans-Medium.eot');
  src: url('../assets/open-sans/medium/OpenSans-Medium.eot?#iefix') format('embedded-opentype'),
    url('../assets/open-sans/medium/OpenSans-Medium.woff2') format('woff2'),
    url('../assets/open-sans/medium/OpenSans-Medium.woff') format('woff'),
    url('../assets/open-sans/medium/OpenSans-Medium.ttf') format('truetype');
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: 'Open Sans';
  src: url('../assets/open-sans/bold/OpenSans-Bold.eot');
  src: url('../assets/open-sans/bold/OpenSans-Bold.eot?#iefix') format('embedded-opentype'),
    url('../assets/open-sans/bold/OpenSans-Bold.woff2') format('woff2'),
    url('../assets/open-sans/bold/OpenSans-Bold.woff') format('woff'),
    url('../assets/open-sans/bold/OpenSans-Bold.ttf') format('truetype');
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

body {
  background-color: #0e1414;
  color: #fff;
  font-family: 'Open Sans', sans-serif;
  margin: 0;
  padding: 0;
}

a {
  transition: all .3 ease;
}

a:hover {
  opacity: .7;
}

#component-1,
#component-2 {
  min-height: 100vh;
  padding: 120px 15px;
  display: flex;
  justify-content: center;
  align-items: center;
}

h1 {
  border-bottom: 1px solid #fff;
  border-bottom: 1px solid #fff;
  font-size: 29px;
  font-weight: 300;
  padding-bottom: 12px;
  text-transform: uppercase;
}

h2 {
  font-size: 42px;
  font-weight: 300;
  line-height: 1.3;
  text-transform: uppercase;
}

p {
  font-size: 18px;
  font-weight: 300;
  line-height: 2;
}

.subtitle {
  color: #ba142d;
  font-weight: bold;
  text-transform: uppercase;
}

.post-img {
  border-bottom: 3px solid #cf1430;
}

.post-title,
.post-anchor {
  color: #fff;
  cursor: pointer;
  font-size: 19px;
  line-height: 1.5;
  padding: 15px 0;
  text-decoration: none;
  text-transform: capitalize;
}

.post-excerpt {
  font-size: 16px;
  line-height: 1.8;
}

.read-more {
  border-bottom: 1px solid #cf1430;
  color: #fff;
  cursor: pointer;
  font-weight: bold;
  padding-bottom: 10px;
  text-decoration: none;
  text-transform: uppercase;
  transition: all .3s ease;
}

.read-more:hover {
  color: #cf1430;
  opacity: 1;
}

@media only screen and (max-width: 1400px) {

  h1 {
    font-size: 24px
  }

  h2 {
    font-size: 32px;
  }

  .post-title,
  .post-anchor {
    font-size: 17px
  }

  .post-excerpt {
    font-size: 15px;
  }
}

@media only screen and (max-width: 1024px) {

  #component-1,
  #component-2 {
    min-height: auto;
    padding: 80px 15px;
  }

  .post-card {
    margin-bottom: 40px;
  }

  .post-card:last-of-type {
    margin-bottom: 0;
  }

  h2 {
    font-size: 24px;
  }

  p {
    font-size: 16px;
    line-height: 1.8;
  }
}

@media only screen and (max-width: 767px) {

  #component-1,
  #component-2 {
    padding: 60px 15px;
  }
}

